# server/src/routes/insights.routes.ts
@@ -4,3 +4,4 @@ import { insightsController } from "../controllers/insights.controller";
 export const insightsRouter = Router();
 
 insightsRouter.get("/country/:countryId", (req, res, next) => insightsController.getCountryInsights(req, res, next));
+insightsRouter.get("/country/:countryId/job-title/:jobTitleId", (req, res, next) => insightsController.getJobTitleInsights(req, res, next));
