# server/src/services/insights.service.ts
@@ -26,6 +26,23 @@ export class InsightsService {
       avgSalary: stats._avg.salary || 0,
     };
   }
+
+  async getJobTitleInsights(countryId: string, jobTitleId: string) {
+    const stats = await prisma.employee.aggregate({
+      where: { countryId, jobTitleId },
+      _avg: { salary: true },
+    });
+
+    if (stats._avg.salary === null) {
+      throw new Error("No data found for this country and job title");
+    }
+
+    return {
+      countryId,
+      jobTitleId,
+      avgSalary: stats._avg.salary,
+    };
+  }
 }
 
 export const insightsService = new InsightsService();
